[tool.poetry]
name = "ampio-yamaha-integration"
version = "0.1.0"
description = "Scripts to help control Yamaha MusicCast devices with Ampio Smart Home"
license = "MIT"
authors = ["Linas NikiperaviÄius <linas@linasdev.com>"]
readme = "README.md"
repository = "https://github.com/linasdev/ampio-yamaha-integration"

[tool.poetry.dependencies]
python = "^3.4"
pyamaha = "^0.3"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
nuitka = "^0.6.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
